# agens

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  codebuff.json  knowledge.md  output.txt  sed_script.txt  temp_script.sh
.github/workflows/: ci.yml
src/: agent_mode.cpp  agent_mode.hpp  backend.cpp  backend.hpp  chat.cpp  chat.hpp  config.cpp  config.hpp  file_finder.cpp  file_finder.hpp  main.cpp  ports.cpp  ports.hpp  system_info.cpp  system_info.hpp  utils.cpp  utils.hpp  web_search.cpp  web_search.hpp
tests/: integration.sh  test_main.cpp
